# apiserver/api_configuration.go
@@ -1,7 +1,7 @@
 /*
- * App template API
+ * Kontakt.io App API
  *
- * API to access and configure the app template
+ * API to access and configure the Kontakt.io App
  *
  * API version: 1.0.0
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -51,19 +51,19 @@ func (c *ConfigurationApiController) Routes() Routes {
 		{
 			"GetConfigurations",
 			strings.ToUpper("Get"),
-			"/v1/configurations",
+			"/v1/configs",
 			c.GetConfigurations,
 		},
 		{
 			"PostConfiguration",
 			strings.ToUpper("Post"),
-			"/v1/configurations",
+			"/v1/configs",
 			c.PostConfiguration,
 		},
 	}
 }
 
-// GetConfigurations - Get example configurations
+// GetConfigurations - Get all Kontakt.io configurations
 func (c *ConfigurationApiController) GetConfigurations(w http.ResponseWriter, r *http.Request) {
 	result, err := c.service.GetConfigurations(r.Context())
 	// If an error occurred, encode the error with the status code
@@ -76,7 +76,7 @@ func (c *ConfigurationApiController) GetConfigurations(w http.ResponseWriter, r 
 
 }
 
-// PostConfiguration - Creates an example configuration
+// PostConfiguration - Creates a configuration
 func (c *ConfigurationApiController) PostConfiguration(w http.ResponseWriter, r *http.Request) {
 	configurationParam := Configuration{}
 	d := json.NewDecoder(r.Body)
